# crohn-flare-predictor

./: .dockerignore  .env.example  .gitignore  ANALISIS_SITUACION.md  CLAUDE.md  Dockerfile  MIGRATION_GUIDE.md  Makefile  README.md  pyproject.toml  quick_test.py  requirements.txt
api/: README.md  __init__.py  app.py  config.py  constants.py  edge_cases_analysis.md  example_requests.json  lifestyle.py  ml_model.py  schemas.py  test_api.py
data/processed/: derived_features_metadata.json
data/processed/crohn/: kmeans.pkl  ml_dataset_metadata.json  scaler.pkl
data/processed/cu/: kmeans.pkl  ml_dataset_metadata.json  scaler.pkl
docs/: API_REFERENCE.md  CLUSTER_STRATIFIED_IMPLEMENTATION.md  DATABASE_SCHEMA.md  DEVELOPMENT.md  INTEGRATION.md  README.md  WEB_APP_GUIDE.md  WEB_INTERFACE.md  architecture.md  deployment.md
docs/mockups/: README.md  cuenta.html  dashboard.html  diario.html  landing.html  login.html  reportes.html
models/: model_metadata.json
models/crohn/: cluster_kmeans.pkl  cluster_metadata.json  cluster_models_metadata.json  cluster_scaler.pkl  model_metadata.json  model_metadata_temporal.json  rf_severity_classifier_cluster_0.pkl  rf_severity_classifier_cluster_1.pkl  rf_severity_classifier_cluster_2.pkl  rf_severity_classifier_global.pkl
models/cu/: cluster_kmeans.pkl  cluster_metadata.json  cluster_models_metadata.json  cluster_scaler.pkl  model_metadata.json  model_metadata_temporal.json  rf_severity_classifier_cluster_0.pkl  rf_severity_classifier_cluster_1.pkl  rf_severity_classifier_global.pkl
notebooks/: 01_exploratory_analysis.ipynb  01_exploratory_analysis_v2.ipynb  02_data_cleaning.ipynb  02_feature_engineering.ipynb  02_feature_engineering_temporal.ipynb  02_feature_engineering_v2.ipynb  02b_feature_engineering_temporal.ipynb  03_advanced_feature_engineering.ipynb  03_feature_engineering.ipynb  03_model_training.ipynb  03_model_training_temporal.ipynb  03b_model_training_temporal.ipynb  04_cluster_stratified_training.ipynb  04_model_training.ipynb  05_cluster_stratified_training_cu.ipynb  README_MIGRATION.txt
scripts/: README.md  cleanup_local.sh  create_sample.py  evaluate_model.py  test_api.py  test_api.sh
tests/: __init__.py  test_ml_model.py  test_schemas.py
