[project]
name = "crohn-flare-predictor"
version = "1.0.0"
description = "Machine Learning system for predicting inflammatory bowel disease flares based on daily symptom tracking"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Asier Ortiz Garcia" }
]
keywords = ["machine-learning", "healthcare", "crohn", "ibd", "prediction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core ML Libraries (PRODUCTION)
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.3.0",

    # API REST (PRODUCTION)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",

    # Utilities (PRODUCTION)
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/asier-ortiz/crohn-flare-predictor"
Documentation = "https://github.com/asier-ortiz/crohn-flare-predictor#readme"
Repository = "https://github.com/asier-ortiz/crohn-flare-predictor"
Issues = "https://github.com/asier-ortiz/crohn-flare-predictor/issues"

# [project.scripts]
# CLI commands removed - using API only
# crohn-predict = "src.model:main"

[dependency-groups]
# Desarrollo local
dev = [
    "black>=23.12.0",
    "flake8>=6.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ipython>=8.18.0",
]

# Análisis y notebooks
notebooks = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.27.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "scipy>=1.11.0",
    "imbalanced-learn>=0.14.0",
]

# Deep Learning (opcional, solo si usas modelos DL)
deep-learning = [
    "tensorflow>=2.15.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
  | models
)/
'''

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=api --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["api"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
